RESOLVED FIXED181903
feMorphology stops applying if either x or y radius is 0 but should not.
https://bugs.webkit.org/show_bug.cgi?id=181903
Summary feMorphology stops applying if either x or y radius is 0 but should not.
Simon Fraser (smfr)
Reported 2018-01-19 22:51:51 PST
Created attachment 331832 [details] Testcase feMorphology should allow x or y radius to be 0 but does not.
Attachments
Testcase (899 bytes, text/html)
2018-01-19 22:51 PST, Simon Fraser (smfr)
no flags
Patch (5.80 KB, patch)
2018-01-23 12:00 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2018-01-23 12:00:29 PST
WebKit Commit Bot
Comment 2 2018-01-23 13:39:16 PST
Comment on attachment 332055 [details] Patch Clearing flags on attachment: 332055 Committed r227440: <https://trac.webkit.org/changeset/227440>
WebKit Commit Bot
Comment 3 2018-01-23 13:39:18 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-01-23 13:40:38 PST
Note You need to log in before you can comment on or make changes to this bug.